# fin-news-analyzer

./: .gitignore  CLOUD_DEPLOYMENT.md  Dockerfile  README.md  config.env.example  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh
.github/workflows/: ci.yml
app/: db.py  db_models.py  main.py  models.py  schema.py  scraper.py  scraper_service.py
backend/: finnews.db
frontend/: index.html
tests/: test_api.py
