[project]
name = "fin-news-analyzer"
version = "1.0.0"
description = "Financial News Sentiment Analyzer using FinBERT"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI uses this)
    "E402",  # module level import not at top of file (acceptable for FastAPI apps)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]  # Allow some bugbear rules in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
